--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -7,14 +7,14 @@ $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Raleway", "Helvetica", "sans-serif";
 
 // Local fonts (uncomment following lines)
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+ @font-face {
+  font-family: "Font Name";
+  src: font-url('FontFile.eot');
+  src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
+       font-url('FontFile.woff') format('woff'),
+       font-url('FontFile.ttf') format('truetype')
+ }
+ $my-font: "Font Name";
 
 // Font-size and line-height
 $base-size: 16px;
@@ -27,7 +27,7 @@ $base-height: 1.4;
 $brand-color: #D23333;
 
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #B6D7DE;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
