--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -40,7 +40,7 @@
           <p>The earth is your new home.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <img src="images/dollar.png" alt="">
+          <%= image_tag "dollar.png", class: "img-rounded avatar" %>
           <h2>Pay online</h2>
           <p>No cash issues anymore.</p>
         </div>
