--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -26,11 +26,11 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 
-$red: #EE5F5B;
+$red: #EA5455;
 $blue: #B6D7DE;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
+$yellow: #F9ED69;
+$orange: #F08A5D;
+$green: #EAFFD0;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
