--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Airbnb home</title>
+    <title>Star system</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -16,19 +16,20 @@
   </head>
 
   <body>
-    <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+    <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/back.jpg');">
       <div class="banner-content">
-        <h1>WELCOME HOME</h1>
-        <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+        <h1>Prêt pour la vie de rêve ?</h1>
+        <p>Partez à la rencontre des stars célibataires du show-biz et vivez une expérience inoubliable !</p>
         <form action="#" class="form-inline">
-          <input type="text" class="form-control input-lg" placeholder="checkin">
-          <input type="text" class="form-control input-lg" placeholder="checkout">
+          <input type="text" class="form-control input-lg" placeholder="Date d'arrivée">
+          <input type="text" class="form-control input-lg" placeholder="Date de départ">
           <select name="" id="" class="form-control input-lg">
-            <option value="1">1 person</option>
-            <option value="2">2 persons</option>
-            <option value="3">3 persons</option>
+            <option value="1">1 beauf</option>
+            <option value="2">2 beaufs</option>
+            <option value="3">3 beaufs</option>
+            <option value="4">Une famille de chtis</option>
           </select>
-          <input type="submit" class="btn btn-primary btn-lg" value="Search">
+          <input type="submit" class="btn btn-primary btn-lg" value="Rejoins les stars !">
         </form>
       </div>
     </div>
@@ -36,66 +37,45 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <img src="images/globe.png" alt="">
-          <h2>Discover the world</h2>
-          <p>The earth is your new home.</p>
+          <h2>Découvrez le monde</h2>
+          <p>Nos stars vivent partout dans le monde.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <%= image_tag "dollar.png", class: "img-rounded avatar" %>
-          <h2>Pay online</h2>
-          <p>No cash issues anymore.</p>
+          <h2>Payez directement en cash</h2>
+          <p>L'escort de luxe n'a jamais été aussi facile.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <img src="images/beer.png" alt="">
-          <h2>Meet people</h2>
-          <p>Discover new culture and lifestyle.</p>
+          <h2>Buvez comme des trous</h2>
+          <p>Ne soyez jamais à court de boisson.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <img src="images/heart.png" alt="">
-          <h2>Share and love</h2>
-          <p>Join a community you will love.</p>
+          <h2>Trouvez l'amour</h2>
+          <p>Rejoignez une communauté de penseurs libres.</p>
         </div>
       </div>
     </div>
-    <div class="wrapper-grey padded">
-      <div class="container">
-        <h2 class="text-center">Your next trip</h2>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
-              <div class="card-category">Paris</div>
-              <div class="card-description">
-                <h2>Seb's home</h2>
-                <p>Charming room with patio</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="images/seb.jpg">
-              <a class="card-link" href="#" ></a>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
-              <div class="card-category">Brussels</div>
-              <div class="card-description">
-                <h2>Anne's home</h2>
-                <p>Lovely house</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="images/anne.jpg">
-              <a class="card-link" href="#" ></a>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
-              <div class="card-category">London</div>
-              <div class="card-description">
-                <h2>Romain's home</h2>
-                <p>Nice flat in Piccadilly</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="images/romain.jpeg">
-              <a class="card-link" href="#" ></a>
-            </div>
-          </div>
+<h1 class="text-center" style="padding-bottom: 50px">Rencontre des célibataires non consanguins !</h1>
+<div class="container">
+  <div class="row">
+    <% data.flats.each do |owner, flat| %>
+    <div class="col-xs-12 col-sm-4">
+      <div class="card" style="background: url('<%= image_path flat.picture %>'), linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path flat.picture %>');">
+        <div class="card-category"><%= flat.city %></div>
+        <div class="card-description">
+          <h2><%= flat.name %></h2>
+          <p><%= flat.summary %></p>
         </div>
+        <%= image_tag flat.owner_picture, class:"card-user avatar avatar-large" %>
+        <%= link_to "#", "flats/#{owner}.html", class: "card-link" %>
       </div>
     </div>
+    <% end %>
+  </div>
+</div>
+
 
     <div class="text-center padded" id="newsletter">
       <h2>Get news from us</h2>
@@ -106,30 +86,6 @@
       </form>
     </div>
 
-    <div id="map" style="width: 100%;height: 500px;"></div>
-
-
-
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-
-    <script type="text/javascript">
-    var myLatlng = new google.maps.LatLng(48.852937,2.364178);
-
-    var myOptions = {
-      zoom: 16,
-      center: myLatlng,
-      scrollwheel: false,
-      mapTypeId: google.maps.MapTypeId.ROADMAP,
-      styles: [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}]
-    };
-
-    var map = new google.maps.Map(document.getElementById('map'), myOptions);
-    var marker = new google.maps.Marker({
-      position: myLatlng,
-      map: map,
-      title:"You are here!"
-    });
-    </script>
 
 
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
